<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10" 
            android:inputType="text"
            android:imeOptions="actionSearch" />
        
		<ImageButton
            android:id="@+id/search"
            android:layout_width="45dp"
            android:layout_height="40dp"
        	android:src="@drawable/ic_search" 
        	android:contentDescription="@string/caption_search"/>        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/caption_border"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/caption_article_id"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@drawable/caption_border"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/caption_article"
            android:textSize="12sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/caption_border"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/caption_store"
            android:textSize="12sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/caption_border"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/caption_quant_s"
            android:textSize="12sp" />

        <TextView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/caption_border"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/caption_select" 
            android:textSize="12sp" />
        
    </LinearLayout>
    
	<ListView android:id="@+id/list"
		android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
</LinearLayout>
